Changed bio and university name

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
-    <meta name="author" content="YOUR NAME HERE" />
+    <meta name="author" content="Natalie Uppal" />
     <link rel="icon" href="../../../../favicon.ico" />
 
     <title>Profile Page</title>
@@ -79,13 +79,13 @@
       <hr class="divider" />
       <h5>Personal Statement</h5>
       <p class="personal-statement">
-        A few lines about who you are, what you are studying and your interests in the technology industry.
+          Final year computer science student, finished a placement year with the Regional Organised Crime Unit. Looking to develop and apply my knowledge within Cyber Security and Deep Learning.
       </p>
       <hr class="divider" />
       <h5>Education</h5>
       <p>
-        University Name ·Course · Start Date - End Date
-        2018
+        University of Hull ·Computer Science · September 2016 - June 2020
+
       </p>
       <strong><p>Modules Include:</p></strong>
       <div class="row">
