--- a/index.html
+++ b/index.html
@@ -42,14 +42,14 @@
           <div class="row">
             <div class="col-md-4">
               <img
-                src="images/avatar.png"
+                src="images/AbbiNatEmma Charities Fave.jpg"
                 alt="..."
                 class="rounded-circle profile-image"
               />
             </div>
             <div class="col-md-8 top-col">
               <h1 class="">Your Name</h1>
-              <p class="lead">Student @ University of ...</p>
+              <p class="lead">Student @ University of Hull</p>
               <p>
                 <a><span class="badge badge-primary">Skill 1</span></a>
                 <a><span class="badge badge-primary">Skill 2</span></a>
