--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
               <ul class="social-icons">
                   <li class="linkedin">
-                    <a href="https://www.linkedin.com/in/"><i class="fa fa-fw fa-linkedin"></i></a>
+                    <a href="https://www.linkedin.com/in/natalie-uppal"><i class="fa fa-fw fa-linkedin"></i></a>
                   </li>
                   <li class="github">
                       <a href="https://github.com/"><i class="fa fa-fw fa-github"></i></a>
