changed the mail to, uni email

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                     <a href="https://medium.com/_"><i class="fa fa-fw fa-medium"></i></a>
                   </li>
                   <li class="mail">
-                      <a href="mailto:name@email.com"><i class="fa fa-fw fa-envelope"></i></a>
+                      <a href="mailto:n.uppal@2016.hull.ac.uk"><i class="fa fa-fw fa-envelope"></i></a>
                     </li>
                 </ul>
             </div>
