--- a/index.html
+++ b/index.html
@@ -91,15 +91,15 @@
       <div class="row">
         <div class="col-sm-6">
           <ul>
-            <li>Module 1</li>
-            <li>Module 2</li>
-            <li>Module 3</li>
+            <li>Virtual Environments</li>
+            <li>Data Mining and Decision Systems</li>
+            <li>Communicating and Teaching</li>
           </ul>
         </div>
         <div class="col-sm-6">
           <ul>
-            <li>Module 4</li>
-            <li>Module 5</li>
+            <li>Visualisation</li>
+            <li>Honors Project- Wi-Fi monitoring system for surveillance use and evidence gathering within the police forces </li>
             <li>Module 6</li>
           </ul>
         </div>
